Version: 0.5.8
Date: ???
  Changes:
    - Added Companion Drones compatibility #108
    - Wood bricks now have a fuel value of 18MJ #216
    - Adjusted Plasma turret recipes #218
    - Acetic acid takes Red metal catalyst rather than Green #219
    - Hydrazine takes Blue metal catalyst rather than Green #219
  Bugfixes:
    - Recipes for Bob's pollution cleaning and pollution producing boards were being hidden even if Circuit Processing was disabled #215
    - Recipes for Lithium and Lithium perchlorate were showing Bob's electroliser in FNEI #224
    - Garden duplication recipes were requiring T2 farms #225
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 11.09.2021
  Changes:
    - Disabled Resin to Rubber recipe
    - Rebalanced Insulated wire recipe to increase rubber consumption
    - Removed Glass smelting 1 as prerequisite for Sniper Rifle
    - Reduced Electrolyser volume
    - Rebalanced Glass mixture recipes
    - Rebalanced Cement recipes
    - Added Brass and Invar smelting as prerequisites for Military science (with SCT)
    - Hid overwritten settings from Bob's Logistics
    - Standardized concrete walk speed bonuses
    - Moved Dinitrogen tetroxide gas recipe to chemical plant and added yellow metal catalyst
  Bugfixes:
    - Fixed startup error with Mad Clown's mods enabled
    - Hid gunmetal item, recipes, and tech
    - Fixed that basic steel smelting was half price
    - Removed fuel value from diesel so it would not show in helper mods
    - Fixed duplicate hazard concrete unlocks
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 14.08.2021
  Changes:
    - Re-enable early glass recipe as Arboretum now require glass
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.08.2021
  Changes: